--- a/SimpleString/SimpleString.csproj
+++ b/SimpleString/SimpleString.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net7.0;net8.0</TargetFrameworks>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <Authors>Lxy</Authors>
     <Description>通过XML注释或指定特性转换成字符串输出。</Description>
@@ -9,9 +9,9 @@
     <PackageProjectUrl>https://github.com/LI-XIAOYAO/SimpleString.git</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/LI-XIAOYAO/SimpleString.git</RepositoryUrl>
-	<VersionPrefix>1.0.4</VersionPrefix>
-	<PackageTags>string;Annotation;xml;Attribute</PackageTags>
-	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <VersionPrefix>1.0.5</VersionPrefix>
+    <PackageTags>string;Annotation;xml;Attribute</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
